<resources>
    <string name="app_name">Sihuan</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_init">initActivity</string>

    <!--initactivity -->
    <string name="captcha">验证码</string>
    <string name="ok">确&#160;&#160;认</string>
    <string name="refresh">刷新</string>

    <!--loginactivity -->
    <string name="title_activity_login">Login</string>
    <string name="login">登&#160;&#160;陆</string>
    <string name="phone_email">邮箱或手机号码</string>
    <string name="passwd">密码</string>

</resources>
